<resources>
    <string name="app_name">MachineMonitor</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="device_manager">设备管理</string>
    <string name="cnc_monitor">CNC监测</string>
    <string name="sensor_monitor">传感器监测</string>
    <string name="data_management">账户</string>
    <string name="tvACurr">A相电流(A):</string>
    <string name="tvBCurr">B相电流(A):</string>
    <string name="tvCCurr">C相电流(A):</string>
    <string name="tvEnergy">电能消耗(J):</string>
    <string name="tvPower">有功功率(W):</string>
    <string name="tvABVoltage">AB相电压(V):</string>
    <string name="tvSound">声音颤振:</string>
    <string name="tvXChatter">X向加速度:</string>
    <string name="tvYChatter">Y向加速度:</string>
    <string name="tvZChatter">Z向加速度:</string>
    <string name="connected">连接</string>
    <string name="disconnected">断开</string>
    <string name="http_10_137_253_94_current">http://192.168.43.165/current</string>
    <string name="user_account">账号</string>
    <string name="user_password">密码</string>
    <string name="user_account_hint">请输入用户名</string>
    <string name="user_password_hint">请输入密码</string>
    <string name="start_data_connection">登陆</string>
    <string name="stop_data_connection">注册</string>
    <string name="device_name">设备名称:</string>
    <string name="device_uuid">设备UUID:</string>
    <string name="device_id">设备ID:</string>
    <string name="device_available">状态:</string>
    <string name="device_info">设备信息</string>
    <string name="chatter_monitor">颤振监测</string>
    <string name="unavailable">UNAVAILABLE</string>
</resources>
